2002-03-23  Roland McGrath  <roland@frob.com>

	* sysdeps/posix/shm_open.c (SHMDIR): /var/run/shm -> /dev/shm
	* sysdeps/posix/shm_unlink.c: Likewise.

2002-03-22  Roland McGrath  <roland@frob.com>

	* shlib-versions [USE_IN_LIBIO] (.*-.*-gnu-gnu.*): Make 2.2.6 default.
	* sysdeps/mach/hurd/configure.in: Default oldest ABI is 2.2.6
	under --enable-libio.
	* sysdeps/mach/hurd/configure: Regenerated.

2002-03-23  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/i386/Makefile
	(sysdep_routines, shared-only-routines): Don't add framestate,
	reverting 2001-10-02 change.
	* sysdeps/unix/sysv/linux/arm/Makefile: Likewise.
	* sysdeps/unix/sysv/linux/alpha/Makefile: Likewise.
	* sysdeps/unix/sysv/linux/i386/Makefile: Likewise.
	* sysdeps/unix/sysv/linux/m68k/Makefile: Likewise.
	* sysdeps/unix/sysv/linux/mips/Makefile: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/Makefile: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/Makefile: Likewise.
	* sysdeps/unix/sysv/linux/sparc/Makefile: Likewise.
	* sysdeps/generic/Makefile (sysdep_routines, shared-only-routines):
	Do it here instead, only if [$(unwind-find-fde) = yes].

2002-03-23  Andreas Jaeger  <aj@suse.de>

	* signal/signal.h: Fix typo. Patch by Steve Kemp
	<skx@tardis.ed.ac.uk>.

2002-03-22  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/syscalls.list: Add getresgid and
	getresuid.

	* sysdeps/unix/sysv/linux/x86_64/bits/sigcontext.h (struct
	_fpstate): Rename fwd to ftw, use _fpxreg and _xmmreg.
	* sysdeps/unix/sysv/linux/x86_64/sys/user.h (struct
	user_fpregs_struct): Rename fwd.

	* sysdeps/unix/sysv/linux/x86_64/register-dump.h (register_dump):
	Follow sigcontext changes.

2002-03-22  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/bits/nan.h: New file.  Copy from generic one with
	changes for NaNs on MIPS.
	Patch by Hartvig Ekner <hartvige@mips.com>.

2002-03-21  Ulrich Drepper  <drepper@redhat.com>

	* nscd/grpcache.c (addgrbyname): Improve buffer allocate with alloca.